# talent-scout

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PRD.md  README.md  claude_client.py  config.json  config_loader.py  data_store.py  docker-compose.yml  pipeline_store.py  pyproject.toml  requirements.md  scout.py
agents/: __init__.py  application_composer.py  base_agent.py  candidate_profiler.py  company_researcher.py  company_scout.py  job_importer.py  job_researcher.py  learning_agent.py  opportunity_scout.py
api/: __init__.py  app.py  auth.py  dependencies.py
api/routers/: artifacts.py  composer.py  corpus.py  discovery.py  jobs.py  pipeline.py  profile.py  tasks.py
openclaw/: README.md  clawhub.yaml
openclaw/shared/references/: actionable-logic.md  analysis-prompt.md  analysis-schema.md  company-research-prompt.md  company-schema.md  company-scout-prompt.md  config-schema.md  corpus-extraction-prompt.md  cover-letter-prompt.md  cover-letter-specificity-prompt.md  interview-prep-prompt.md  job-schema.md  job-search-prompt.md  job-url-parse-prompt.md  learning-prompts.md  location-rules.md  pipeline-stages.md  profile-format.md  research-schema.md  resume-defensibility-prompt.md  resume-edit-audit-prompt.md  resume-edit-plan-prompt.md  resume-generation-prompt.md  role-archetypes.md  role-lens-guidance.md  scoring-criteria.md  three-phase-protocol.md  two-pass-protocol.md
openclaw/shared/scripts/: README.md  pyproject.toml  scout_tools.py
openclaw/skills/scout-analyze/: SKILL.md  clawhub.yaml
openclaw/skills/scout-companies/: SKILL.md  clawhub.yaml
openclaw/skills/scout-cover-letter/: SKILL.md  clawhub.yaml
openclaw/skills/scout-interview-prep/: SKILL.md  references  (+1 more)
services/: __init__.py  base_service.py  composer_service.py  corpus_service.py  discovery_service.py  document_converter.py  exceptions.py  job_service.py  models.py  profile_service.py  task_manager.py
skills/: __init__.py  base_skill.py  company_researcher.py  corpus_builder.py  cover_letter_generator.py  interview_prep.py  job_description_analyzer.py  job_posting_retriever.py  resume_editor.py  resume_generator.py
templates/: cover-letter.html  resume.html
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_jobs.py  test_pipeline.py  test_system.py
tests/services/: test_job_service.py
tests/skills/: test_job_posting_retriever.py
(+8 files in other folders)
