[project]
name = "talent-scout"
version = "0.1.0"
description = "AI-powered job search automation tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "markdown>=3.5.0",
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
]

[project.scripts]
scout = "scout:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
