[project]
name = "talent-scout"
version = "0.2.0"
description = "AI-powered job search automation tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "markdown>=3.5.0",
    "weasyprint>=62.0",
    "python-docx>=1.1.0",
    "pydantic>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[project.scripts]
scout = "scout:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
