[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "talent-scout-scripts"
version = "0.1.0"
description = "CLI tools for Talent Scout OpenClaw skills"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Ron Lin"}]
readme = "README.md"
keywords = ["talent-scout", "openclaw", "job-search", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

[project.urls]
Homepage = "https://github.com/ronlin/talent-scout"
Repository = "https://github.com/ronlin/talent-scout"

[project.scripts]
scout-tools = "scout_tools:main"
